Fix mobile About portrait cropping by keeping 4/5 aspect ratio and adjusting object-position

--- a/styles/index.css
+++ b/styles/index.css
@@ -572,6 +572,7 @@ h1, h2, h3, h4, h5, h6 {
   width: 100%;
   height: 100%;
   object-fit: cover;
+  object-position: center 15%;
 }
 
 .about-text h2 {
@@ -1487,7 +1488,7 @@ h1, h2, h3, h4, h5, h6 {
   }
 
   .about-image {
-    aspect-ratio: 16 / 10;
+    aspect-ratio: 4 / 5;
   }
 
   .about-stats {
